resources/testcases_static_checks/tests/positive/isFrontierGuarded/quaternary-ladder.rls
../../../tests_common_data/rule-classification-examples/quaternary-ladder.rls