resources/testcases_static_checks/tests/negative/isRmfc/inducedConstantMappingNeedsToBeInjective.rls
../../../tests_common_data/critical-examples/inducedConstantMappingNeedsToBeInjective.rls